# lian-li-linux

./: .gitignore  Cargo.toml  More_Tasks.md  README.md  Tasks.md  known_hosts_test  lianli-gui.desktop
backend/: Cargo.toml
backend/src/: app.rs  main.rs  tests.rs
backend/src/auth/: mod.rs
backend/src/config/: mod.rs
backend/src/daemon/: mod.rs
backend/src/errors/: mod.rs
backend/src/events/: mod.rs
backend/src/handlers/: mod.rs
backend/src/models/: mod.rs
backend/src/routes/: mod.rs
backend/src/storage/: mod.rs
docker/: runtime.Dockerfile  test-runner.Dockerfile  wireless-probe.Dockerfile
docs/: README.md  api.md  architecture.md  backend-config.md  backend.md  cli-reuse.md  cli-usage.md  config-analysis.md  container-tests.md  daemon-headless.md  deployment.md  domain-model.md  event-model.md  eventing-analysis.md  frontend-state-model.md  frontend-state-strategy.md  frontend.md  future-extensions.md  gui-to-daemon-flows.md  headless-setup.md  ipc-protocol.md  mvp-capabilities.md  polling-fallback.md  profile-model.md  profile-storage.md  repo-analysis.md  runtime-validation.md
frontend/: README.md  index.html  null  package-lock.json  package.json  vite.config.ts  vitest.config.ts
scripts/: analyze-usb-meteor.ps1  await-websocket-event.py  capture-usb-meteor.ps1  check-daemon.sh  generate-container-report.sh  run-container-tests.ps1  run-container-tests.sh  run-test-suite.sh  (+2 more)
tools/decode-capture/: Cargo.toml
tools/decode-capture/src/: main.rs
tools/lianli-cli/: Cargo.toml
tools/lianli-cli/src/: commands.rs  daemon_client.rs  main.rs
(+178 files in other folders)
