[package]
name = "lianli-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lianli-cli"
path = "src/main.rs"

[dependencies]
lianli-shared = { path = "../../crates/lianli-shared" }
clap = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
